--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "~7.0.2",
+    "@angular/cli": "^7.0.4",
+    "@angular/compiler-cli": "^7.0.2",
     "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/compiler-cli": "~7.0.0",
     "@angular/animations": "~7.0.0",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
@@ -32,14 +33,13 @@
     "node": "latest"
   },
   "devDependencies": {
-    "@angular/cli": "~7.0.2",
     "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/compiler-cli": "~7.0.0",
-    "typescript": "~3.1.1",
+    "@angular/cli": "^7.0.4",
+    "@angular/compiler-cli": "^7.0.2",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -50,7 +50,8 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0"
+    "tslint": "~5.11.0",
+    "typescript": "~3.1.1"
   },
   "engines": {
     "node": "8.12.0",
