--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "^7.0.4",
-    "@angular/compiler-cli": "^7.0.2",
     "@angular-devkit/build-angular": "~0.10.0",
     "@angular/animations": "~7.0.0",
+    "@angular/cli": "^7.0.4",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
+    "@angular/compiler-cli": "^7.0.2",
     "@angular/core": "~7.0.0",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
@@ -26,10 +26,11 @@
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
+    "node": "latest",
     "rxjs": "~6.3.3",
     "typescript": "~3.1.1",
-    "zone.js": "~0.8.26",
-    "node": "latest"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
@@ -53,7 +54,7 @@
     "typescript": "~3.1.1"
   },
   "engines": {
-    "node": "8.12.0",
+    "node": "10.13.0",
     "npm": "6.4.1"
   }
 }
